--- a/gatekeeper/mybanknamespace/deploy-assign.yaml
+++ b/gatekeeper/mybanknamespace/deploy-assign.yaml
@@ -7,6 +7,10 @@ metadata:
 spec:
   match:
     scope: Namespaced
+    excludedNamespaces:
+    - kube-system
+    - kube-public
+    - kube-node-lease
     kinds:
     - apiGroups: ["*"]
       kinds: ["Pod"]
