--- a/gatekeeper/samples/deploy-namespace.yaml
+++ b/gatekeeper/samples/deploy-namespace.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: mybanknamespace
+  name: mybank
   labels:
     environment: eng
     application: sample
