--- a/gatekeeper/samples/deploy-assign.yaml
+++ b/gatekeeper/samples/deploy-assign.yaml
@@ -41,4 +41,4 @@ spec:
     assign:
       value:
       - name: ca-bundle
-        mountPath: /host/ca-certificates.crt
+        mountPath: /mybank/ca-certificates.crt
