--- a/csi/vault/deploy-secret-provider-class.yaml
+++ b/csi/vault/deploy-secret-provider-class.yaml
@@ -17,3 +17,11 @@ spec:
       - objectName: "POSTGRES_PASSWORD"
         secretPath: "secret/data/webapp/config"
         secretKey: "POSTGRES_PASSWORD"
+  secretObjects:
+  - data:
+    - key: POSTGRES_USER
+      objectName: POSTGRES_USER
+    - key: POSTGRES_PASSWORD
+      objectName: POSTGRES_PASSWORD
+    secretName: application
+    type: Opaque
