--- a/csi/vault/deploy-secret-provider-class.yaml
+++ b/csi/vault/deploy-secret-provider-class.yaml
@@ -7,16 +7,16 @@ metadata:
 spec:
   provider: vault
   parameters:
-    vaultAddress: "http://vault.vault:8200"
-    vaultKubernetesMountPath: "eng-cluster"
-    roleName: "webapp"
+    vaultAddress: http://vault.vault:8200
+    vaultKubernetesMountPath: eng-cluster
+    roleName: webapp
     objects: |
-      - objectName: "POSTGRES_USER"
-        secretPath: "secret/data/webapp/config"
-        secretKey: "POSTGRES_USER"
-      - objectName: "POSTGRES_PASSWORD"
-        secretPath: "secret/data/webapp/config"
-        secretKey: "POSTGRES_PASSWORD"
+      - objectName: POSTGRES_USER
+        secretPath: secret/data/webapp/config
+        secretKey: POSTGRES_USER
+      - objectName: POSTGRES_PASSWORD
+        secretPath: secret/data/webapp/config
+        secretKey: POSTGRES_PASSWORD
   secretObjects:
   - data:
     - key: POSTGRES_USER
