--- a/csi/vault/deploy-application.yaml
+++ b/csi/vault/deploy-application.yaml
@@ -11,6 +11,8 @@ kind: Deployment
 metadata:
   name: application
   namespace: hashi-demo
+  annotations:
+    reloader.stakater.com/auto: "true"
 spec:
   replicas: 1
   selector:
@@ -36,12 +38,12 @@ spec:
         - name: POSTGRES_USER
           valueFrom:
             secretKeyRef:
-              name: application
+              name: application-secret
               key: POSTGRES_USER
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: application
+              name: application-secret
               key: POSTGRES_PASSWORD
         volumeMounts:
         - name: secrets
