--- a/csi/vault/deploy-secret-provider-class.yaml
+++ b/csi/vault/deploy-secret-provider-class.yaml
@@ -23,5 +23,5 @@ spec:
       objectName: POSTGRES_USER
     - key: POSTGRES_PASSWORD
       objectName: POSTGRES_PASSWORD
-    secretName: application
+    secretName: application-secret
     type: Opaque
