--- a/argocd/vendor.install-image-updater.yaml
+++ b/argocd/vendor.install-image-updater.yaml
@@ -94,6 +94,7 @@ spec:
       - command:
         - /usr/local/bin/argocd-image-updater
         - run
+        - --interval 1m0s
         env:
         - name: APPLICATIONS_API
           valueFrom:
