--- a/argocd/vendor.install-image-updater.yaml
+++ b/argocd/vendor.install-image-updater.yaml
@@ -94,7 +94,7 @@ spec:
       - command:
         - /usr/local/bin/argocd-image-updater
         - run
-        - --interval=1
+        - --interval=1m
         env:
         - name: APPLICATIONS_API
           valueFrom:
