--- a/cert-manager/self-certificate.yaml
+++ b/cert-manager/self-certificate.yaml
@@ -14,7 +14,7 @@ metadata:
   name: webapp-demo
   namespace: app-webapp-demo
 spec:
-  isCA: true
+  isCA: false
   commonName: www.webapp.com
   secretName: webapp-demo
   dnsNames:
