--- a/cert-manager/self-ingress.yaml
+++ b/cert-manager/self-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   name: webapp-demo
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
+    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
     cert-manager.io/issuer: "webapp-demo"
 spec:
   tls:
