--- a/consul/hashicups/public-api.yaml
+++ b/consul/hashicups/public-api.yaml
@@ -12,15 +12,12 @@ spec:
       targetPort: 8080
   selector:
     app: public-api
-
 ---
-
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: public-api
 automountServiceAccountToken: true
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -38,19 +35,18 @@ spec:
         service: public-api
         app: public-api
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "9102"
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "product-api:9090"
+        consul.hashicorp.com/enable-metrics-merging: "false"
     spec:
       serviceAccountName: public-api
       containers:
         - name: public-api
-          image: hashicorpdemoapp/public-api:v0.0.1
+          image: hashicorpdemoapp/public-api:v0.0.5
           ports:
             - containerPort: 8080
           env:
             - name: BIND_ADDRESS
               value: ":8080"
-            - name: PRODUCTS_API_URI
+            - name: PRODUCT_API_URI
               value: "http://localhost:9090"
