--- a/consul/hashicups/config-service-defaults.yaml
+++ b/consul/hashicups/config-service-defaults.yaml
@@ -13,3 +13,19 @@ metadata:
   name: frontend
 spec:
   protocol: http
+
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceDefaults
+metadata:
+  name: public-api
+spec:
+  protocol: http
+
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceDefaults
+metadata:
+  name: product-api
+spec:
+  protocol: http
