--- a/consul/hashicups/frontend.yaml
+++ b/consul/hashicups/frontend.yaml
@@ -13,13 +13,11 @@ spec:
   selector:
     app: frontend
 ---
-
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: frontend
 automountServiceAccountToken: true
-
 ---
 apiVersion: v1
 kind: ConfigMap
@@ -73,10 +71,9 @@ spec:
         service: frontend
         app: frontend
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "9102"
         consul.hashicorp.com/connect-inject: "true"
         consul.hashicorp.com/connect-service-upstreams: "public-api:8080"
+        consul.hashicorp.com/enable-metrics-merging: "false"
     spec:
       serviceAccountName: frontend
       volumes:
@@ -88,7 +85,7 @@ spec:
             path: default.conf
       containers:
         - name: frontend
-          image: hashicorpdemoapp/frontend:v0.0.3
+          image: hashicorpdemoapp/frontend:v0.0.5
           ports:
             - containerPort: 80
           volumeMounts:
