--- a/consul/hashicups/postgres.yaml
+++ b/consul/hashicups/postgres.yaml
@@ -12,15 +12,12 @@ spec:
       targetPort: 5432
   selector:
     app: postgres
-
 ---
-
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: postgres
 automountServiceAccountToken: true
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -41,11 +38,12 @@ spec:
         prometheus.io/scrape: "true"
         prometheus.io/port: "9102"
         consul.hashicorp.com/connect-inject: "true"
+        consul.hashicorp.com/enable-metrics-merging: "false"
     spec:
       serviceAccountName: postgres
       containers:
         - name: postgres
-          image: hashicorpdemoapp/product-api-db:v0.0.11
+          image: hashicorpdemoapp/product-api-db:v0.0.16
           ports:
             - containerPort: 5432
           env:
