--- a/consul/hashicups/frontend.yaml
+++ b/consul/hashicups/frontend.yaml
@@ -72,7 +72,7 @@ spec:
         app: frontend
       annotations:
         consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/connect-service-upstreams: "public-api:8080"
+        consul.hashicorp.com/connect-service-upstreams: "public-api:8080,example-https:1234"
         consul.hashicorp.com/enable-metrics-merging: "false"
     spec:
       serviceAccountName: frontend
