--- a/consul/hashicups/config-terminating-gw-datadog-node-01.json
+++ b/consul/hashicups/config-terminating-gw-datadog-node-01.json
@@ -6,8 +6,8 @@
     "external-probe": "true"
   },
   "Service": {
-    "ID": "datadog",
+    "ID": "datadog-01",
     "Service": "datadog",
-    "Port": 443
+    "Port": 80
   }
 }
