--- a/consul/hashicups/config-intentions.yaml
+++ b/consul/hashicups/config-intentions.yaml
@@ -2,6 +2,39 @@
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceIntentions
 metadata:
+  name: elastic
+spec:
+  destination:
+    name: elastic
+  sources:
+    - name: frontend
+      action: allow
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceIntentions
+metadata:
+  name: demo
+spec:
+  destination:
+    name: demo
+  sources:
+    - name: frontend
+      action: allow
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceIntentions
+metadata:
+  name: sample
+spec:
+  destination:
+    name: sample
+  sources:
+    - name: frontend
+      action: allow
+---
+apiVersion: consul.hashicorp.com/v1alpha1
+kind: ServiceIntentions
+metadata:
   name: datadog
 spec:
   destination:
