--- a/consul/hashicups/config-terminating-gw-datadog-node-03.json
+++ b/consul/hashicups/config-terminating-gw-datadog-node-03.json
@@ -1,13 +1,14 @@
 {
   "Node": "datadog-node-03",
-  "Address": "13.226.139.53",
+  "Address": "www.amazon.com",
   "NodeMeta": {
     "external-node": "true",
     "external-probe": "true"
   },
   "Service": {
-    "ID": "datadog-03",
+    "ID": "datadog",
+    "Address": "www.amazon.com",
     "Service": "datadog",
-    "Port": 80
+    "Port": 443
   }
 }
