--- a/consul/hashicups/deploy/config-service-router.yaml
+++ b/consul/hashicups/deploy/config-service-router.yaml
@@ -2,11 +2,11 @@
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceRouter
 metadata:
-  name: product-api
+  name: hashicups-product-api
 spec:
   routes:
     - match:
         http:
           pathPrefix: '/coffees'
       destination:
-        service: 'coffee-service'
+        service: 'hashicups-coffee-service'
