--- a/consul/hashicups/deploy/config-service-resolver.yaml
+++ b/consul/hashicups/deploy/config-service-resolver.yaml
@@ -2,7 +2,7 @@
 apiVersion: consul.hashicorp.com/v1alpha1
 kind: ServiceResolver
 metadata:
-  name: coffee-service
+  name: hashicups-coffee-service
 spec:
   defaultSubset: v1
   subsets:
