--- a/consul/hashicups/deploy/product-api.yaml
+++ b/consul/hashicups/deploy/product-api.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: product-api
+  name: hashicups-product-api
 spec:
   selector:
-    app: product-api
+    app: hashicups-product-api
   ports:
     - name: http
       protocol: TCP
@@ -15,7 +15,7 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: product-api
+  name: hashicups-product-api
 automountServiceAccountToken: true
 ---
 apiVersion: v1
@@ -33,24 +33,24 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: product-api
+  name: hashicups-product-api
   labels:
-    app: product-api
+    app: hashicups-product-api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: product-api
+      app: hashicups-product-api
   template:
     metadata:
       labels:
-        app: product-api
+        app: hashicups-product-api
       annotations:
         consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/connect-service-upstreams: "postgres:5432"
+        consul.hashicorp.com/connect-service-upstreams: "hashicups-postgres:5432"
         consul.hashicorp.com/enable-metrics-merging: "false"
     spec:
-      serviceAccountName: product-api
+      serviceAccountName: hashicups-product-api
       volumes:
       - name: config
         configMap:
@@ -59,7 +59,7 @@ spec:
           - key: config
             path: conf.json
       containers:
-        - name: product-api
+        - name: hashicups-product-api
           image: hashicorpdemoapp/product-api:v0.0.16
           ports:
             - containerPort: 9090
