--- a/consul/hashicups/deploy/public-api.yaml
+++ b/consul/hashicups/deploy/public-api.yaml
@@ -2,46 +2,46 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: public-api
+  name: hashicups-public-api
   labels:
-    app: public-api
+    app: hashicups-public-api
 spec:
   type: ClusterIP
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: public-api
+    app: hashicups-public-api
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: public-api
+  name: hashicups-public-api
 automountServiceAccountToken: true
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: public-api
+  name: hashicups-public-api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      service: public-api
-      app: public-api
+      service: hashicups-public-api
+      app: hashicups-public-api
   template:
     metadata:
       labels:
-        service: public-api
-        app: public-api
+        service: hashicups-public-api
+        app: hashicups-public-api
       annotations:
         consul.hashicorp.com/connect-inject: "true"
-        consul.hashicorp.com/connect-service-upstreams: "product-api:9090"
+        consul.hashicorp.com/connect-service-upstreams: "hashicups-product-api:9090"
         consul.hashicorp.com/enable-metrics-merging: "false"
     spec:
-      serviceAccountName: public-api
+      serviceAccountName: hashicups-public-api
       containers:
-        - name: public-api
+        - name: hashicups-public-api
           image: hashicorpdemoapp/public-api:v0.0.5
           ports:
             - containerPort: 8080
